--- a/app/views/organized/ambassador_dashboards/getting_started.html.haml
+++ b/app/views/organized/ambassador_dashboards/getting_started.html.haml
@@ -1,24 +1,14 @@
 %h2.header-font-uncap
-  10 tips for getting started in your town
+  = t(".10_tips_for_getting_started_in_your_town")
 
 %ol
-  %li
-    Be a part of your local cycling culture. This comes in many forms, Whether you’re a racer or commuter, gravel grinder, mechanic, or enthusiast, there are ways to get involved. Get to know others who are active in the cycling community. Even in a big city, cyclists know cyclists and are very welcoming.
-  %li
-    Have twitter. Connect with all your local cyclists on twitter. Promote Bike Index on twitter and don’t be afraid to tag and name drop us.
-  %li
-    Post and RT stolen bikes in your area. Connect people looking to match stolen bikes in your community. People will follow you, and you can follow them too! You don’t have to be an official to keep an eye out for stolen bikes.
-  %li
-    Find and talk to local bloggers and enlist them. They will have followings in your area. Interview some folks and get some articles written and published.
-  %li
-    Engage your local city and cops. Find the people who deal with whatever local bike registry system your city uses. Sometimes a simple “_____ bike registry” search will lead you to the person you need to talk to.
-  %li
-    Seek out local facebook groups that find stolen bikes. They exist, and there might be more than one.
-  %li
-    Promote the hell out of Bike Index to cops, bike shops, and biking orgs all the time, in person and via twitter. It helps to approach with materials in hand, whether that’s a flyer, some stickers, or a business card.
-  %li
-    Encourage people to watch craigslist and offerup for your area, and match sketchy bikes for sale in the Bike Index. BIKE HUNT ALL DAY.
-  %li
-    Grow your network via bike theft victims in that area. Engage them to help out and do the above. There is a good chance they will be interested if they're pissed off about bike thefts.
-  %li
-    Ride your bike! Express your love for bikes in whatever form you want. The people you’re going to talk to do their work because they love bikes too. Sharing that with them will create the first steps in a great partnership.
+  %li= t(".be_a_part_of_your_local_cycling_culture")
+  %li= t(".have_twitter_connect")
+  %li= t(".post_and_rt_stolen_bikes")
+  %li= t(".find_and_talk_to_local_bloggers")
+  %li= t(".engage_your_local_city_and_cops")
+  %li= t(".seek_out_local_facebook_groups")
+  %li= t(".promote_bike_index")
+  %li= t(".encourage_people_to_watch")
+  %li= t(".grow_your_network_via_bike")
+  %li= t(".ride_your_bike_express_your")
