--- a/app/views/organized/ambassador_dashboards/show.html.haml
+++ b/app/views/organized/ambassador_dashboards/show.html.haml
@@ -1,33 +1,20 @@
+- help_link = link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"
+
 %h1.header-font-uncap
-  Welcome to your Ambassador homepage
+  = t(".welcome_to_your_ambassador_homepage")
 
-%p
-  This page contains the resources you need to become a great bike advocate in
-  your community. Here you will find documents, tips, articles, and
-  recommendations for helping cyclists where you live and connecting with
-  Ambassadors around the world doing the same in their communities.
-
-%p
-  Being a Bike Index Ambassador means helping people, where you live, to
-  register and protect their bikes in case of theft. Share Bike Index with bike
-  shops, advocacy groups, universities, and law enforcement to aid larger
-  numbers and more kinds of cyclists in your area.
-
-%p
-  On this page, we've listed effective activities for registering cyclists in
-  Bike Index. You can track progress and get ideas from other Ambassadors in
-  your area about successful strategies. If you have any questions, post them in
-  our Slack channel or email
-  #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"}.
+%p= t(".this_page_contains_the_resources_you_need")
+%p= t(".being_a_bike_index_ambassador")
+%p= t(".activities_for_registering_cyclists_html", help_link: help_link)
 
 - if @suggested_activities.present?
-  %h2 Suggested Activities
+  %h2= t(".suggested_activities")
   .full-screen-table
     %table.table.table-striped.table-bordered.ambassador-tasks-table
       %thead.small-header
         %tr
-          %th Activity
-          %th Actions
+          %th= t(".activity")
+          %th= t(".actions")
       %tbody
         - @suggested_activities.each do |task|
           %tr
@@ -40,13 +27,13 @@
                 = button_to_toggle_task_completion_status(task, current_user, current_organization)
 
 - if @completed_activities.present?
-  %h2 Completed activities
+  %h2= t(".completed_activities")
   .full-screen-table
     %table.table.table-striped.table-bordered.ambassador-tasks-table
       %thead.small-header
         %tr
-          %th Activity
-          %th Completed
+          %th= t(".activity")
+          %th= t(".completed")
       %tbody
         - @completed_activities.each do |task|
           %tr
@@ -58,13 +45,13 @@
               %span.convertTime= l task.completed_at, format: :convert_time
 
 
-%h2 Leaderboard
+%h2= t(".leaderboard")
 .full-screen-table
   %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
     %thead.small-header
       %tr
-        %th Name
-        %th Activities
+        %th= t(".name")
+        %th= t(".activities")
     %tbody
       - @ambassadors.each do |ambassador|
         %tr
