--- a/app/views/organized/bikes/recoveries.html.haml
+++ b/app/views/organized/bikes/recoveries.html.haml
@@ -5,7 +5,7 @@
     Recoveries
   %p
     %strong
-      #{ pluralize(@recoveries.total_count, 'recovery') }
+      = pluralize(@recoveries.total_count, 'recovery')
 
   %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.table-compact-long
     %thead.small-header
@@ -41,8 +41,10 @@
 
           %td
             %small
-              = bike.mnfg_name
-              = ", #{bike.frame_model}" if bike.frame_model.present?
+              if bike.frame_model.present?
+                = [bike.mnfg_name, bike.frame_model].join(", ")
+              else
+                = bike.mnfg_name
               %span.less-strong
                 = bike.frame_colors.to_sentence
           %td
