--- a/app/views/organized/bikes/incompletes.html.haml
+++ b/app/views/organized/bikes/incompletes.html.haml
@@ -1,35 +1,30 @@
 .organized-page-header
-  %h1
-    %em
-      = current_organization.name
-    Incomplete Registrations
+  %h1= t(".org_incomplete_registrations_html", org_name: current_organization.name)
 
 %p
   %strong
     = @b_params.total_count
-    - if params[:query].present?
-      matching
-    incomplete
-    = "registration".pluralize(@b_params.total_count)
+    = t(".matching") if params[:query].present?
+    = t(".incomplete")
+    = pluralize(@b_params.total_count, t(".registration"))
 .mt-4.mb-2
   = form_tag incompletes_organization_bikes_path(organization_id: current_organization.to_param), method: :get do
     .row
       .col-sm-8.col-md-10
         .form-group
-          = text_field_tag :query, params[:query], placeholder: "Search emails", class: "form-control"
+          = text_field_tag :query, params[:query], placeholder: t(".search_emails"), class: "form-control"
       .col-sm-4.col-md-2
         .actions
-          = submit_tag "Search", class: "btn btn-primary"
+          = submit_tag t(".search"), class: "btn btn-primary"
 
 - include_child_org = current_organization.child_ids.any?
 %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
   %thead.small-header
     %th
-      Sent&nbsp;<small class="convertTimezone"></small>
-    %th
-      Bike
-    %th
-      email
+      = t(".sent")
+      %small.convertTimezone
+    %th= t(".bike")
+    %th= t(".email")
   %tbody
     - @b_params.each do |b_param|
       %tr
@@ -44,7 +39,7 @@
           = b_param.owner_email
           - if include_child_org && b_param.organization != current_organization
             %small.less-strong{ style: "display: block; line-height: 1;" }
-              through
+              = t(".through")
               = b_param.organization.short_name
 
 .paginate-container.paginate-container-bottom
