--- a/app/views/organized/bikes/recoveries.html.haml
+++ b/app/views/organized/bikes/recoveries.html.haml
@@ -1,23 +1,18 @@
 .mb-4
-  %h1
-    %em
-      = current_organization.name
-    Recoveries
+  %h1= t(".org_recoveries_html", org_name: current_organization.name)
+
   %p
     %strong
-      = pluralize(@recoveries.total_count, 'recovery')
+      = pluralize(@recoveries.total_count, t(".recovery"))
 
   %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.table-compact-long
     %thead.small-header
       %tr
-        %th.date-added Date Recovered
-        %th Description
-        %th
-          mnfg, model,
-          %span.less-strong
-            color
-        %th
-          Owner
+        %th.date-added= t(".date_recovered")
+        %th= t(".description")
+        %th= t(".mfg_model_color_html")
+        %th= t(".owner")
+
     %tbody
       - display_recovery_ids = current_user.superuser?
       - @recoveries.each do |recovered_record|
@@ -41,9 +36,9 @@
 
           %td
             %small
-              if bike.frame_model.present?
+              - if bike.frame_model.present?
                 = [bike.mnfg_name, bike.frame_model].join(", ")
-              else
+              - else
                 = bike.mnfg_name
               %span.less-strong
                 = bike.frame_colors.to_sentence
