Add bulk_imports, exports

--- a/app/views/organized/ambassador_dashboards/resources.html.haml
+++ b/app/views/organized/ambassador_dashboards/resources.html.haml
@@ -18,4 +18,4 @@
   %li= link_to(t(".qr_sticker_org_instructions"), t(".qr_sticker_org_instructions_url"))
   %li= link_to(t(".qr_sticker_instructions"), t(".qr_sticker_instructions_url"))
   %li= t(".page_on_bike_index_html", signup_link: link_to(t(".organizations_sign_up"), new_organization_path))
-  %li= link_to t(".tips_for_talking_to_bike_shops"), t("tips_for_talking_to_bike_shops_url")
+  %li= link_to t(".tips_for_talking_to_bike_shops"), t(".tips_for_talking_to_bike_shops_url")
