--- a/app/views/organized/bulk_imports/index.html.haml
+++ b/app/views/organized/bulk_imports/index.html.haml
@@ -1,32 +1,32 @@
 .organized-page-header.mb-4
   %h1
-    %em
-      = current_organization.name
     - if current_organization.ascend_imports?
-      Ascend Imports
+      = t(".org_ascend_imports_html", org_name: current_organization.name)
     - else
-      Bulk Imports
+      = t(".org_bulk_imports_html", org_name: current_organization.name)
 
 .paginate-container
   .paginate{ style: "margin: 12px auto 12px 0;" }
     - if @show_empty
-      = link_to "Exclude Empty imports", organization_bulk_imports_path(organization_id: current_organization.to_param, without_empty: true), class: "btn btn-lg btn-secondary"
+      = link_to t(".exclude_empty_imports"),
+      organization_bulk_imports_path(organization_id: current_organization.to_param, without_empty: true),
+      class: "btn btn-lg btn-secondary"
     - else
-      = link_to "Include Empty imports", organization_bulk_imports_path(organization_id: current_organization.to_param), class: "btn btn-lg btn-secondary"
+      = link_to t(".include_empty_imports"),
+      organization_bulk_imports_path(organization_id: current_organization.to_param),
+      class: "btn btn-lg btn-secondary"
+
   = paginate @bulk_imports
 
 %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
   %thead.small-header
     %th
-      Added&nbsp;<small class="convertTimezone"></small>
-    %th
-      Progress
-    %th
-      Errors
-    %th
-      Creator
-    %th
-      Bikes
+      = t(".added")
+      %small.convertTimezone
+    %th= t(".progress")
+    %th= t(".errors")
+    %th= t(".creator")
+    %th= t(".bikes")
   %tbody
     - @bulk_imports.each do |bulk_import|
       %tr
@@ -36,21 +36,22 @@
         %td
           - if bulk_import.blocking_error?
             %span.text-danger
-              Unable to process
+              = t(".unable_to_process")
           - else
             - bulk_import_progress_class = bulk_import.progress == "finished" ? "text-success" : ""
             %span{ class: bulk_import_progress_class }
               = bulk_import.progress
         %td
           - if bulk_import.line_import_errors.present?
-            <span class="text-danger">Line</span>
+            %span.text-danger= t(".line")
           - if bulk_import.file_import_errors.present?
-            <span class="text-danger">File!</span>
+            %span.text-danger= t(".file")
         %td
-          - if bulk_import.user_id.present?
-            = bulk_import.user.display_name
+          = bulk_import.user.display_name if bulk_import.user_id.present?
         %td
           = bulk_import.creation_states.count # Don't need to do bikes through creation states
 
 %p.text-right
-  = link_to "New import", new_organization_bulk_import_path(organization_id: current_organization.to_param), class: "btn btn-primary"
+  = link_to t(".new_import"),
+  new_organization_bulk_import_path(organization_id: current_organization.to_param),
+  class: "btn btn-primary"
