--- a/app/views/organized/users/index.html.haml
+++ b/app/views/organized/users/index.html.haml
@@ -22,7 +22,7 @@
 
 .organized-table
   %table.table.table-striped.table-bordered.table-sm
-    %thead
+    %thead.sortable
       %th
         = sortable "created_at"
       %th
