--- a/app/views/admin/bike_codes/index.html.haml
+++ b/app/views/admin/bike_codes/index.html.haml
@@ -143,7 +143,8 @@
               / For these, use bike_id to avoid loading association
               = organized_bike_text(bike_code.bike)
           %td
-            = link_to bike_code.code, "/bikes/scanned/#{bike_code.code}?organization_id=#{bike_code.organization.to_param}"
+            %strong
+              = link_to bike_code.pretty_code, "/bikes/scanned/#{bike_code.code}?organization_id=#{bike_code.organization.to_param}"
             - unless bike_code.sticker?
               %em.small.text-warning
                 = bike_code.kind
