--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -37,7 +37,8 @@
   - else
     = number_with_delimiter(@bikes.total_count)
     = "bike".pluralize(@bikes.total_count)
-    registered
+    registered with #{current_organization.short_name}
+
   - search_params = @interpreted_params.merge(organization_id: current_organization.to_param)
   - unless skip_view_just_stolen
     - if @stolenness == 'all'
