--- a/app/views/organized/bikes/incompletes.html.haml
+++ b/app/views/organized/bikes/incompletes.html.haml
@@ -39,8 +39,7 @@
           = b_param.owner_email
           - if include_child_org && b_param.organization != current_organization
             %small.less-strong{ style: "display: block; line-height: 1;" }
-              = t(".through")
-              = b_param.organization.short_name
+              = t(".through_org", org_name: b_param.organization.short_name)
 
 .paginate-container.paginate-container-bottom
   = paginate @b_params
