--- a/app/assets/stylesheets/revised/pages/organized/messages.scss
+++ b/app/assets/stylesheets/revised/pages/organized/messages.scss
@@ -1,4 +1,14 @@
 .organized-messages {
+  #messagesCount {
+    span.plural {
+      display: none;
+    }
+
+    &.number-is-plural span.plural {
+      display: inline-block;
+    }
+  }
+
   #map {
     width: 100%;
     height: 400px;
