--- a/app/views/organized/messages/index.html.haml
+++ b/app/views/organized/messages/index.html.haml
@@ -1,24 +1,34 @@
 .organized-page-header
-  %h1= @kinds.map(&:titleize).join(", ")
+  %h1
+    #{@kinds.map(&:titleize).join(", ")}
 
 .organized-messages
   #map
 
-  %p#messagesCount.text-right.less-strong
-    %span.number 0
-    = t(".matches")
+  %p#messagesCount.text-right.less-strong.number-is-plural
+    %span.number
+      0
+    matching message<span class="plural">s</span>
 
   %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border#messages_table
     %thead.small-header.hidden-md-down
       %th.map-cell
       %th
-        = t(".sent")
-        %small.convertTimezone
-      %th= t(".bike")
-      %th= t(".sender")
+        Sent&nbsp;<small class="convertTimezone"></small>
+      %th
+        Bike
+      %th
+        Sender
     %tbody
 
+- serialized_members = current_organization.users.map { |u| u && [u.id.to_s, { name: u.display_name }] }.compact.to_h.to_json
 :javascript
-  window.pageInfo = #{@page_data.to_json}
+  window.pageInfo = {
+    "google_maps_key": "#{ENV["GOOGLE_MAPS"]}",
+    "map_center_lat": #{current_organization.map_focus_coordinates[:latitude]},
+    "map_center_lng": #{current_organization.map_focus_coordinates[:longitude]},
+    "members": #{serialized_members},
+    "message_root_path": "#{organization_messages_path(organization_id: current_organization.to_param)}"
+  }
 
 = javascript_pack_tag "application"
